--- a/game-of-go-qt-ui/game-of-go-qt-ui/loginwindow.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/loginwindow.ui
@@ -41,10 +41,13 @@
       <x>90</x>
       <y>140</y>
       <width>221</width>
-      <height>81</height>
+      <height>98</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
+     <property name="horizontalSpacing">
+      <number>10</number>
+     </property>
      <property name="verticalSpacing">
       <number>20</number>
      </property>
@@ -62,15 +65,15 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="txt_username"/>
-     </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="txt_password">
        <property name="echoMode">
         <enum>QLineEdit::Password</enum>
        </property>
       </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="txt_username"/>
      </item>
     </layout>
    </widget>
@@ -87,7 +90,7 @@
      <string>Login</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="lbl_error">
     <property name="geometry">
      <rect>
       <x>90</x>
