--- a/game-of-go-qt-ui/game-of-go-qt-ui/gamewidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/gamewidget.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>39</x>
-     <y>79</y>
+     <y>109</y>
      <width>791</width>
      <height>711</height>
     </rect>
@@ -28,7 +28,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>810</y>
+     <y>830</y>
      <width>151</width>
      <height>41</height>
     </rect>
@@ -45,8 +45,8 @@
   <widget class="QPushButton" name="btn_resign">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>810</y>
+     <x>470</x>
+     <y>830</y>
      <width>151</width>
      <height>41</height>
     </rect>
@@ -65,8 +65,8 @@
     <rect>
      <x>40</x>
      <y>20</y>
-     <width>151</width>
-     <height>41</height>
+     <width>121</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -88,6 +88,27 @@
     </rect>
    </property>
    <layout class="QVBoxLayout" name="rightVBox"/>
+  </widget>
+  <widget class="QLabel" name="lbl_prompt">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>60</y>
+     <width>791</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
   </widget>
  </widget>
  <resources/>
