--- a/game-of-go-qt-ui/game-of-go-qt-ui/territorywidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/territorywidget.ui
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GameBoardWidget</class>
- <widget class="QWidget" name="GameBoardWidget">
+ <class>TerritoryWidget</class>
+ <widget class="QWidget" name="TerritoryWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>400</height>
+    <height>300</height>
    </rect>
-  </property>
-  <property name="mouseTracking">
-   <bool>true</bool>
   </property>
   <property name="windowTitle">
    <string>Form</string>
