Add history screen

--- a/game-of-go-qt-ui/game-of-go-qt-ui/playwidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/playwidget.ui
@@ -118,6 +118,27 @@
     <string>Board size:</string>
    </property>
   </widget>
+  <widget class="QLabel" name="lbl_title">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>70</y>
+     <width>281</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>32</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>PLAY</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
