--- a/game-of-go-qt-ui/game-of-go-qt-ui/menuwidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/menuwidget.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>190</y>
+     <y>240</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -35,7 +35,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>290</y>
+     <y>340</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -53,7 +53,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>390</y>
+     <y>440</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -71,7 +71,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>490</y>
+     <y>540</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -89,7 +89,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>590</y>
+     <y>640</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -101,6 +101,27 @@
    </property>
    <property name="text">
     <string>Log out</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_title">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>120</y>
+     <width>281</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>32</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>MENU</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
