--- a/game-of-go-qt-ui/game-of-go-qt-ui/historywidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/historywidget.ui
@@ -57,6 +57,24 @@
     </property>
    </widget>
   </widget>
+  <widget class="QPushButton" name="btn_back">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
