--- a/game-of-go-qt-ui/game-of-go-qt-ui/playwidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/playwidget.ui
@@ -67,7 +67,7 @@
     <string>Play with CPU</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="btn_settings">
    <property name="geometry">
     <rect>
      <x>560</x>
@@ -137,6 +137,24 @@
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Back</string>
    </property>
   </widget>
  </widget>
