--- a/game-of-go-qt-ui/game-of-go-qt-ui/playwidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/playwidget.ui
@@ -139,7 +139,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="btn_leave">
    <property name="geometry">
     <rect>
      <x>20</x>
