--- a/game-of-go-qt-ui/game-of-go-qt-ui/gamewidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/gamewidget.ui
@@ -27,9 +27,9 @@
   <widget class="QPushButton" name="btn_pass">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>80</x>
      <y>830</y>
-     <width>151</width>
+     <width>131</width>
      <height>41</height>
     </rect>
    </property>
@@ -45,9 +45,9 @@
   <widget class="QPushButton" name="btn_resign">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>240</x>
      <y>830</y>
-     <width>151</width>
+     <width>141</width>
      <height>41</height>
     </rect>
    </property>
@@ -113,9 +113,9 @@
   <widget class="QPushButton" name="btn_draw">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>410</x>
      <y>830</y>
-     <width>151</width>
+     <width>141</width>
      <height>41</height>
     </rect>
    </property>
@@ -126,6 +126,24 @@
    </property>
    <property name="text">
     <string>Offer A Draw</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_new_game">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>830</y>
+     <width>141</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Start New Game</string>
    </property>
   </widget>
  </widget>
