--- a/game-of-go-qt-ui/game-of-go-qt-ui/historyitemwidget.ui
+++ b/game-of-go-qt-ui/game-of-go-qt-ui/historyitemwidget.ui
@@ -116,7 +116,7 @@
      <x>160</x>
      <y>40</y>
      <width>161</width>
-     <height>41</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
@@ -142,6 +142,27 @@
    </property>
    <property name="text">
     <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_elo">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>40</y>
+     <width>81</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>+20 ELO</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
  </widget>
